# EzLang

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  _debug.py  build.py  config.json  debug_lexer.py  debug_tree.py  install.sh  project.toml  pyproject.toml  requirements.txt  task.md  tasks.md
.claude/: settings.local.json
cli/: __init__.py  ez.py
compiler/: __init__.py  __main__.py  ast_nodes.py  codegen.py  context.py  errors.py  pyproject.toml  requirements.txt  visitor.py
compiler/src/: __init__.py  compiler.py
compiler/src/ast/: __init__.py
compiler/src/codegen/: __init__.py  llvm_codegen.py
compiler/src/parser/: EzLang.interp  EzLang.tokens  EzLangLexer.interp  EzLangLexer.py  EzLangLexer.tokens  EzLangListener.py  EzLangParser.py  EzLangVisitor.py  __init__.py  ast_builder.py  string_literals.py
compiler/src/parser/grammar/: EzLang.g4  EzLang.interp  EzLang.tokens  EzLangLexer.interp  EzLangLexer.py  EzLangListener.py  EzLangParser.py  EzLangVisitor.py
compiler/src/runtime/: __init__.py
compiler/src/semantic/: __init__.py  analyzer.py  symbols.py  type_checker.py
compiler/tests/: __init__.py  test_cli.py  test_codegen.py  test_e2e.py  test_lsp.py  test_parser.py  test_runtime.py  test_semantic.py
compiler/tests/fixtures/: compress_zlib_check.c  crypto_platform_check.c  crypto_portable_check.c  random_determinism_check.c  regex_portable_check.c
docs/: cli-manual.md  compiler-architecture.md  doc.md  ez-android-ui.md  ez-ios-ui.md  ez-web-ui.md  runtime-design.md  stdlib-api.md  stdlib.md  toolchain.md  tutorial.md
docs/en/: cli-manual.md  compiler-architecture.md  doc.md  ez-android-ui.md  ez-ios-ui.md  ez-web-ui.md  runtime-design.md  stdlib-api.md  stdlib.md  toolchain.md  tutorial.md
editors/vscode/: .vscodeignore  language-configuration.json  package-lock.json  (+1 more)
examples/: arena.ez  basics.ez  control.ez  flow.ez  functions.ez  hello.ez  modules.ez  operators.ez  simd.ez  structs.ez  test.ez  test_lib.ez  type_checks.ez  types.ez  vars.ez  wasi_test.ez
ezlang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
grammar/: EzLang.g4
lsp/: __init__.py  __main__.py  server.py
src/: ast.rs  codegen.rs  lib.rs  main.ez  main.rs  memory.rs  parser.rs  types.rs
tests/: __init__.py  parser.rs  test_acceptance.py  test_codegen.py  test_control_flow.py  test_functions.py  test_ir_acceptance.py  test_lexer.py  test_lexer_acceptance.py  test_operators.py  test_parser_acceptance.py  test_promotion.py  test_semantic_analyzer.py  test_semantic_safety.py  test_types.py  test_wasi.py  type_checker.rs
(+29 files in other folders)
