[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ezlang-compiler"
version = "0.1.0"
description = "EzLang programming language compiler"
authors = [
  { name="EzLang Team" }
]
requires-python = ">=3.10"
dependencies = [
  "antlr4-python3-runtime==4.13.2",
  "llvmlite>=0.43.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "isort>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
